// Copyright Â© 2017-2018 Stratumn SAS
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program. If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

import "github.com/stratumn/go-indigonode/cli/grpc/ext/ext.proto";

package stratumn.indigonode.cli.test;

option go_package = "github.com/stratumn/go-indigonode/cli/grpc/test;test";

service Test {
  rpc UnaryReq (Message) returns (Message) {
    option (stratumn.indigonode.cli.ext.method_desc) = "Unary request";
  }

  rpc ServerStream (Message) returns (stream Message) {
    option (stratumn.indigonode.cli.ext.method_desc) = "Server stream";
  }

  rpc NoExt (Message) returns (Message) {}
}

message Message {
  string noext = 1;

  string req = 2 [
    (stratumn.indigonode.cli.ext.field_desc) = "required field",
    (stratumn.indigonode.cli.ext.field_required) = true
  ];

  string str = 10 [
    (stratumn.indigonode.cli.ext.field_desc) = "string field"
  ];
  repeated string str_repeated = 11 [
    (stratumn.indigonode.cli.ext.field_desc) = "string repeated field"
  ];

  bool boolean = 12 [
    (stratumn.indigonode.cli.ext.field_desc) = "bool field"
  ];
  repeated bool boolean_repeated = 13 [
    (stratumn.indigonode.cli.ext.field_desc) = "bool repeated field"
  ];

  int32 i32 = 14 [
    (stratumn.indigonode.cli.ext.field_desc) = "int32 field"
  ];
  repeated uint32 i32_repeated = 15 [
    (stratumn.indigonode.cli.ext.field_desc) = "int32 repeated field"
  ];

  uint32 u32 = 16 [
    (stratumn.indigonode.cli.ext.field_desc) = "uint32 field"
  ];
  repeated uint32 u32_repeated = 17 [
    (stratumn.indigonode.cli.ext.field_desc) = "uint32 repeated field"
  ];

  int64 i64 = 18 [
    (stratumn.indigonode.cli.ext.field_desc) = "int64 field"
  ];
  repeated int64 i64_repeated = 19 [
    (stratumn.indigonode.cli.ext.field_desc) = "int64 repeated field"
  ];

  uint64 u64 = 20 [
    (stratumn.indigonode.cli.ext.field_desc) = "uint64 field"
  ];
  repeated uint64 u64_repeated = 21 [
    (stratumn.indigonode.cli.ext.field_desc) = "uint64 repeated field"
  ];

  bytes buf = 22 [
    (stratumn.indigonode.cli.ext.field_desc) = "bytes field"
  ];
  repeated bytes buf_repeated = 23 [
    (stratumn.indigonode.cli.ext.field_desc) = "bytes repeated field"
  ];

  enum Enum {
    A = 0;
    B = 1;
  }
  Enum enumeration = 30 [
    (stratumn.indigonode.cli.ext.field_desc) = "enum field"
  ];
  repeated Enum enumeration_repeated = 31 [
    (stratumn.indigonode.cli.ext.field_desc) = "enum repeated field"
  ];

  bytes base58 = 50 [
    (stratumn.indigonode.cli.ext.field_desc) = "base58 field",
    (stratumn.indigonode.cli.ext.field_base58) = true
  ];
  repeated bytes base58_repeated = 51 [
    (stratumn.indigonode.cli.ext.field_desc) = "base58 repeated field",
    (stratumn.indigonode.cli.ext.field_base58) = true
  ];

  bytes multiaddr = 52 [
    (stratumn.indigonode.cli.ext.field_desc) = "multiaddr field",
    (stratumn.indigonode.cli.ext.field_multiaddr) = true
  ];
  repeated bytes multiaddr_repeated = 53 [
    (stratumn.indigonode.cli.ext.field_desc) = "multiaddr repeated field",
    (stratumn.indigonode.cli.ext.field_multiaddr) = true
  ];

  int64 time = 54 [
    (stratumn.indigonode.cli.ext.field_desc) = "time field",
    (stratumn.indigonode.cli.ext.field_time) = true
  ];
  repeated int64 time_repeated = 55 [
    (stratumn.indigonode.cli.ext.field_desc) = "time repeated field",
    (stratumn.indigonode.cli.ext.field_time) = true
  ];

  int64 duration = 56 [
    (stratumn.indigonode.cli.ext.field_desc) = "duration field",
    (stratumn.indigonode.cli.ext.field_duration) = true
  ];
  repeated int64 duration_repeated = 57 [
    (stratumn.indigonode.cli.ext.field_desc) = "duration repeated field",
    (stratumn.indigonode.cli.ext.field_duration) = true
  ];

  uint64 bytesize = 58 [
    (stratumn.indigonode.cli.ext.field_desc) = "bytesize field",
    (stratumn.indigonode.cli.ext.field_bytesize) = true
  ];
  repeated uint64 bytesize_repeated = 59 [
    (stratumn.indigonode.cli.ext.field_desc) = "bytesize repeated field",
    (stratumn.indigonode.cli.ext.field_bytesize) = true
  ];

  uint64 byterate = 60 [
    (stratumn.indigonode.cli.ext.field_desc) = "byterate field",
    (stratumn.indigonode.cli.ext.field_byterate) = true
  ];
  repeated uint64 byterate_repeated = 61 [
    (stratumn.indigonode.cli.ext.field_desc) = "byterate repeated field",
    (stratumn.indigonode.cli.ext.field_byterate) = true
  ];
}
